--- a/CarHub/CarHub.csproj
+++ b/CarHub/CarHub.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\img\" />
+  </ItemGroup>
+
 </Project>
